style.css
*{
  margin: 0;
  padding: 0;
  outline: none;
  border: none;
}

body{
  text-align: center;
  justify-content: center;
}

article{
  display: flex;
  flex-direction: column;
  align-items: center;
}

main{
  max-width: 80ch;
  margin-top: 5rem;
  margin-bottom: 5rem;
  border: 0.4rem solid black;
  border-radius: 2rem;
  padding: 3rem;

  display: flex;
  gap: 2rem;
  margin-inline: 1rem;
}

#question-mark-image{
  width: 6rem;
}

.main-section-header{
  margin-bottom: 1rem;
}

section{
  max-width: 80ch;
  margin-top: 5rem;
  margin-bottom: 5rem;
  
  border: 0.4rem solid black;
  border-radius: 2rem;

  padding: 3rem;
  margin-inline: 1rem;
}

.main-section-paragraph{
  color: gray;
  font-weight: 600;
  font-size: 1.5rem;
}

.section-header{
  margin-bottom: 2rem;
  font-weight: 600;
  font-size: 2rem;
}

.section-paragraph{
  color: gray;
  font-size: 1.5rem;
  font-weight: 600;
}


@media(max-width: 720px){
  #question-mark-image{
      display: none;
  }
}

@media(max-width: 630px){
    /* main{
      margin-inline: 1rem;
    } */
    .main-section-paragraph{
      font-size: 1.2rem;
    }

    .section-paragraph{
      font-size: 1.3rem;
    }
}

@media(max-width: 480px){
  .main-section-header{
    margin-bottom: 1rem;
  }

  .main-section-paragraph{
    font-size: 0.8rem;
    color: black
  }

  main{
    padding: 2rem;
  }

  section{
    padding: 2rem;
  }

  .section-header{
    margin-bottom: 1rem;
  }

  .section-paragraph{
    font-size: 0.8rem;
    color: black;
  }
}

